--- a/sayhello/templates/base.html
+++ b/sayhello/templates/base.html
@@ -28,7 +28,7 @@
 
     </header>
 
-    <form action="/refresh" method="get" class="form">
+    <form action="/refresh" method="get" class="hello-form">
         <button name="refresh" type=submit class="button">Refresh the data</button>
     </form>
 
