--- a/sayhello/templates/index.html
+++ b/sayhello/templates/index.html
@@ -3,10 +3,10 @@
 
 {% block content %}
 
-<table width="100%" border="0">
+<table width="100%" border="0" style="vertical-align: top">
       <tbody>
         <tr>
-          <td width="38%">
+          <td width="38%" style="vertical-align: top">
               <!--Name Entities and Functions-->
                   <h5>Named Entities Mentioned</h5>
                     <div class="list-group">
@@ -46,24 +46,25 @@
               <!-- information extraction module ended -->
 
           </td>
-            <td width="4%">&nbsp;</td>
+            <td width="4%" style="vertical-align: top">&nbsp;</td>
 
-          <td width="58%">
+          <td width="58%" style="vertical-align: top">
               <!-- Input Area -->
               <h5>Any Comments?</h5>
               <div class="hello-form">
-                {{ render_form(fact_form, action=request.full_path) }}
+                {{ render_form(form, action=request.full_path) }}
               </div>
 
           </td>
         </tr>
+
         <tr>
-          <td>&nbsp;</td>
-            <td>&nbsp;</td>
-          <td>
+          <td style="vertical-align: top">&nbsp;</td>
+            <td style="vertical-align: top">&nbsp;</td>
+          <td style="vertical-align: top">
               <!--Comments area -->
 
-                              <!-- This is Predicates Rank 1 -->
+              <!-- This is Predicates Rank 1 -->
                 <h5>{{ predicates|length }} Predicates</h5>
                 <div class="list-group">
                     {% for predicate in predicates %}
