--- a/sayhello/templates/index.html
+++ b/sayhello/templates/index.html
@@ -51,9 +51,25 @@
           <td width="58%" style="vertical-align: top">
               <!-- Input Area -->
               <h5>Any Comments?</h5>
-              <div class="hello-form">
-                {{ render_form(form, action=request.full_path) }}
-              </div>
+                  <div class="container">
+                    <!-- 胶囊选项卡 -->
+                    <ul class="nav nav-pills">
+                        <li class="active"><a href="#pan1" data-toggle="pill">  发现  </a></li>
+                        <li><a href="#pan2" data-toggle="pill">  搜索  </a></li>
+                        <li><a href="#pan3" data-toggle="pill">  工具  </a></li>
+                    </ul>
+                    <!-- 面板 -->
+                    <div class="tab-content">
+                        <div class="tab-pane active" id="pan1">发现面板内容发现面板内容
+                            <div class="hello-form">
+                                {{ render_form(form, action=request.full_path) }}
+                            </div>
+                        </div>
+                        <div class="tab-pane" id="pan2">搜索面板内容搜索面板内容</div>
+                        <div class="tab-pane" id="pan3">工具面板内容工具面板内容</div>
+                    </div>
+                  </div>
+
 
           </td>
         </tr>
@@ -63,7 +79,6 @@
             <td style="vertical-align: top">&nbsp;</td>
           <td style="vertical-align: top">
               <!--Comments area -->
-
               <!-- This is Predicates Rank 1 -->
                 <h5>{{ predicates|length }} Predicates</h5>
                 <div class="list-group">
