--- a/sayhello/templates/base.html
+++ b/sayhello/templates/base.html
@@ -29,7 +29,7 @@
     </header>
 
     <form action="/refresh" method="get" class="form">
-        <button name="refresh" type=submit class="button">Refresh the data</button>
+        <button name="refresh" type=submit class="btn btn-secondary">Refresh the data</button>
     </form>
 
     {% for message in get_flashed_messages() %}
