--- a/sayhello/templates/index.html
+++ b/sayhello/templates/index.html
@@ -54,15 +54,15 @@
                   <div class="container">
                     <!-- 胶囊选项卡 -->
                     <ul class="nav nav-pills">
-                        <li class="active"><a href="#pan1" data-toggle="pill">  发现  </a></li>
-                        <li><a href="#pan2" data-toggle="pill">  搜索  </a></li>
-                        <li><a href="#pan3" data-toggle="pill">  工具  </a></li>
+                        <li class="active"><a href="#pan1" data-toggle="pill" class="btn btn-secondary" style="margin: 10px">Facts</a></li>
+                        <li><a href="#pan2" data-toggle="pill" class="btn btn-secondary" style="margin: 10px">Predicate and Logic</a></li>
+                        <li><a href="#pan3" data-toggle="pill" class="btn btn-secondary" style="margin: 10px">Emotional</a></li>
                     </ul>
                     <!-- 面板 -->
                     <div class="tab-content">
-                        <div class="tab-pane active" id="pan1">发现面板内容发现面板内容
+                        <div class="tab-pane active" id="pan1">You can provide some facts (pls try to use Third Person) and pay attention to proper grammar.
                             <div class="hello-form">
-                                {{ render_form(form, action=request.full_path) }}
+                                {{ render_form(fact_form, action=request.full_path) }}
                             </div>
                         </div>
                         <div class="tab-pane" id="pan2">搜索面板内容搜索面板内容</div>
