last_alpha_version

--- a/sayhello/templates/base.html
+++ b/sayhello/templates/base.html
@@ -80,6 +80,7 @@ document.getElementById("submit_btn").className = "btn btn-primary"
 document.getElementById("c_type").style="display: none"
 document.getElementById("c_type").value="Facts"
 document.getElementById("body_textarea").focus()
+document.getElementById("facts_btn").click()
 
 </script>
 <!--
