--- a/sayhello/templates/base.html
+++ b/sayhello/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{% block title %}Say Hello!{% endblock %}</title>
+    <title>{% block title %}Jianfeng DEMO{% endblock %}</title>
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
@@ -34,15 +34,15 @@
 <main class="container">
     <header>
         <h1 class="text-center display-4">
-            <a href="{{ url_for('index') }}" class="text-success"><strong>ERG3020 DEMO</strong></a>
-            <small class="text-muted sub-title">to the world</small>
+            <a href="{{ url_for('index') }}" class="text-success"><strong>Jianfeng</strong></a>
+            <small class="text-muted sub-title">DEMO</small>
         </h1>
         <h4 class="text-center">
             <small>Discussion Topic: The money was stolen. Who stole the money?</small>
         </h4>
 
         <h6 class="text-center">
-            <small>版本2.0: 选择Fact，输入一句英语简单句子，它将利用自然语言处理(AllenNLP)算法自动转化为原子从句(Atom Clauses)</small>
+            <small>Respect Mao Jianfeng</small>
         </h6>
 
     </header>
