--- a/sayhello/templates/base.html
+++ b/sayhello/templates/base.html
@@ -42,7 +42,7 @@
         </h4>
 
         <h6 class="text-center">
-            <small>Respect Mao Jianfeng</small>
+            <small>Author: ERG3020 Group Zhuoyu LI, Xiyan LUO, Bokai XU</small>
         </h6>
 
     </header>
