--- a/sayhello/templates/index.html
+++ b/sayhello/templates/index.html
@@ -96,7 +96,7 @@
                             <br/>
                             Logic operators provided here may be useful.
                             <br/>
-                            For example: steal(x) ^ accuses_of_stealing(x,y) => !lie(y)
+                            For example: steal(x) ∩ accuses_of_stealing(x,y) => !lie(y)
                             It means, if x steals the money and y accuses x of stealing, then y does not lie.
                             <br/>
                             <input type="button" name="button" value="!" class="btn btn-info" style="margin: 10px" id="add_not" onclick="add_spec('!')">
@@ -108,11 +108,11 @@
                             <input type="button" name="button" value="(" class="btn btn-info" style="margin: 10px" id="add_left" onclick="add_spec('(')">
                             <input type="button" name="button" value=")" class="btn btn-info" style="margin: 10px" id="add_right" onclick="add_spec(')')">
                             <input type="button" name="button" value="," class="btn btn-info" style="margin: 10px" id="add_comma" onclick="add_spec(',')">
-                            <!--
+
                             <input type="button" name="button" value="x" class="btn btn-info" style="margin: 10px" id="add_x" onclick="add_spec('x')">
                             <input type="button" name="button" value="y" class="btn btn-info" style="margin: 10px" id="add_y" onclick="add_spec('y')">
                             <input type="button" name="button" value="z" class="btn btn-info" style="margin: 10px" id="add_z" onclick="add_spec('z')">
-                            -->
+
                         </div>
                         <div class="tab-pane" id="pan3">
                             Feel free to say something of this topic, and speeches in this area will not be plugged into inference process.
