--- a/sayhello/templates/base.html
+++ b/sayhello/templates/base.html
@@ -11,6 +11,7 @@
         function change_fact(c_type){
             document.getElementById("c_type").value=c_type;
             document.getElementById("body_textarea").focus()
+            document.getElementById("c_type").value=""
         }
 
         function add_spec(this_input){
