--- a/sayhello/templates/index.html
+++ b/sayhello/templates/index.html
@@ -35,6 +35,7 @@
 
                     <!-- Functions -->
                     <h5>Functions Mentioned</h5>
+                    <small>Click each function to add it to your logic expression.</small>
                     <div class="list-group">
                         {% for function in functions %}
                             <a class="list-group-item list-group-item-action flex-column" onclick="add_function('{{ function.prefix }}')">
