--- a/sayhello/templates/base.html
+++ b/sayhello/templates/base.html
@@ -11,7 +11,7 @@
         function change_fact(c_type){
             document.getElementById("c_type").value=c_type;
             document.getElementById("body_textarea").focus()
-            document.getElementById("c_type").value=""
+            document.getElementById("body_textarea").value=""
         }
 
         function add_spec(this_input){
@@ -39,7 +39,7 @@
             <small class="text-muted sub-title">DEMO</small>
         </h1>
         <h4 class="text-center">
-            <small>Discussion Topic: The money was stolen. Who stole the money?</small>
+            <small>A new kind of social media combined with Markov Logic Network</small>
         </h4>
 
         <h6 class="text-center">
