--- a/sayhello/templates/base.html
+++ b/sayhello/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{% block title %}Jianfeng DEMO{% endblock %}</title>
+    <title>{% block title %}剑锋 Jianfeng DEMO{% endblock %}</title>
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
@@ -25,6 +25,14 @@
                 document.getElementById("body_textarea").focus()
             }
 
+            if (document.getElementById("c_type").value=="Query"){
+                var this_in = this_input
+                var s = this_in.replace("(","")
+                document.getElementById("body_textarea").value=document.getElementById("body_textarea").value + s
+                document.getElementById("body_textarea").focus()
+            }
+
+
         }
     </script>
 </head>
@@ -35,15 +43,15 @@
 <main class="container">
     <header>
         <h1 class="text-center display-4">
-            <a href="{{ url_for('index') }}" class="text-success"><strong>Jianfeng</strong></a>
+            <a href="{{ url_for('index') }}" class="text-success"><strong>剑锋 Jianfeng</strong></a>
             <small class="text-muted sub-title">DEMO</small>
         </h1>
         <h4 class="text-center">
-            <small>A new kind of social media combined with Markov Logic Network</small>
+            <small>基于马尔可夫逻辑网和自然语言处理构建的新型社交网络</small>
         </h4>
 
         <h6 class="text-center">
-            <small>Author: ERG3020 Group Zhuoyu LI, Xiyan LUO, Bokai XU</small>
+            <small>作者: {Bokai XU, Zhuoyu LI, Xiyan LUO} @ CUHK(Shenzhen)</small>
         </h6>
 
     </header>
@@ -55,14 +63,19 @@
         </div>
     {% endfor %}
     {% block content %}{% endblock %}
-
+<hr/>
     <footer class="text-center">
         {% block footer %}
-            <p>A CUHK(SZ) ERG3020 Project</p>
+            <small>香港中文大学（深圳） ERG3020 小组项目</small>
         {% endblock %}
-
+        <br/>
+<p></p>
         <form action="/refresh" method="get">
-            <button name="refresh" type=submit class="btn btn-secondary">Refresh the data</button>
+            <button name="refresh" type=submit class="btn">清空数据</button>
+        </form>
+<p></p>
+        <form action="/clear_func" method="get">
+            <button name="clear_func" type=submit class="btn">清除动作库</button>
         </form>
 
     </footer>
@@ -84,13 +97,6 @@ document.getElementById("body_textarea").focus()
 document.getElementById("facts_btn").click()
 
 </script>
-<!--
-
-"
--->
-
-
-
 
 
 </body>
